--- a/guicegwt/src/main/webapp/WEB-INF/web.xml
+++ b/guicegwt/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,18 @@
     "http://java.sun.com/dtd/web-app_2_3.dtd">
 
 <web-app>
+	<filter>
+		<filter-name>guiceFilter</filter-name>
+		<filter-class>com.google.inject.servlet.GuiceFilter</filter-class>
+	</filter>
 
+	<filter-mapping>
+		<filter-name>guiceFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<listener>
+		<listener-class>open.pp.sample.guicegwt.server.injector.SampleServletContextListner</listener-class>
+	</listener>
   <!-- Servlets -->
 
   <!-- Default page to serve -->
