--- a/guicegwt/pom.xml
+++ b/guicegwt/pom.xml
@@ -86,9 +86,9 @@
 			<version>3.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.agnie.gwt</groupId>
-			<artifactId>mvn-helper-lib</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>4.2.0.Final</version>
 		</dependency>
 	</dependencies>
 
